# school21_prjkt

./: README.md  exam03.c
bsq/: Makefile  bsq  ft_strlen.c  infa_map.h  main.c  map00  map_creator.c  n_to_0.c
c_pool/: README.md
cpp/day05/ex02/: AForm.h  Bureaucrat.cpp  Bureaucrat.h  CMakeLists.txt  PresidentialPardonForm.cpp  PresidentialPardonForm.h  RobotomyRequestForm.cpp  RobotomyRequestForm.h  ShrubberyCreationForm.cpp  ShrubberyCreationForm.h  main.cpp
cpp/day05/ex03/: AForm.cpp  AForm.h  Bureaucrat.cpp  Bureaucrat.h  CMakeLists.txt  Intern.cpp  Intern.h  Makefile  PresidentialPardonForm.cpp  PresidentialPardonForm.h  RobotomyRequestForm.cpp  RobotomyRequestForm.h  ShrubberyCreationForm.cpp  ShrubberyCreationForm.h  main.cpp
cub3d/: Makefile  check_len_color.c  cub  cub.c  cub.h  cub_b  cub_map.cub  data_creator.c  errors_cleaners.c  events.c  game_doors.c  game_drow_fl_ceil.c  game_drow_minimap.c  game_drow_start.c  game_get_ray.c  game_throw_rays.c  game_utils.c  game_wall_drow.c  map_get_colors.c  map_init_validate.c  map_init_validate_b.c  map_is_close.c  map_size_collector.c  map_ways_colors.c  mini.cub  test_micro.c
fdf/: .gitignore  Makefile  colors.c  drower.c  errors.c  events.c  fdf  fdf.c  fdf.h  map.fdf  rebuilder.c
get_next_line/: a.out  get_next_line.c  get_next_line_utils.c
libft/: ft_isdigit.c  ft_lstclear.c  ft_lstiter.c  ft_memmove.c  ft_strdup.c  ft_strlcpy.c
philosophers/: Makefile  atoi.c  live.c  philo.h  philosophers
pipex/: Makefile  pipex_bonus.c
push_swap/: Makefile  algo_for_3_5.c  algo_push_back.c  errors.c
(+541 files in other folders)
